{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "365cd4ae-cf9e-4d47-881c-0c262d64e6c6",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "6bf3def8-f836-40d2-abc7-aea2037e784f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b697cc66-f308-4233-b7ed-243f36eb2568",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "33bc8b8b-0e14-4317-a822-1a5ab1295364",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "5f4c8977-0128-4d11-9417-6f2f182a2c03",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "48f7f2e4-3ba2-443d-81a3-185608c97915",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Controller",
                    "id": "c3d27ddd-916c-4c28-b891-e7cb37f36a50",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "d94a316e-8737-4f1b-98ee-7f4e5085059a",
                    "path": "<DualSenseGamepadHID>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ddb54fc7-71e1-4f52-ad3e-51938c326cdb",
                    "path": "<DualSenseGamepadHID>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f855b623-269c-4ed2-be09-ce8bf8ab78f5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}